<?xml version="1.0"?>
<package format="3">
  <name>ras598_assignment_3</name>
  <version>0.0.1</version>
  <description>Assignment 3: Robot Localization using a 3D Bayes histogram filter.</description>

  <maintainer email="eva@example.com">eva</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>stage_ros2</exec_depend>
  <exec_depend>marker_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
